MAYBE: datatables sexier, check up

--- a/templates/404.html
+++ b/templates/404.html
@@ -10,6 +10,9 @@
 		<div class="text-3xl flex flex-col self-end self-center">
 			<div class="text-8xl font-bold self-end">{{error}}</div> 
 			<div class="self-end">{{text}}</div>
+			<br>
+			<div class='self-end text-base text-right'>{{desc}}<br>
+			Click <a target='_blank' href="https://www.hongkiat.com/blog/common-http-errors/">here</a> to learn more.</div>
 		</div>
 		<img class='h-auto py-5' src="https://i.ibb.co/5L5qKfd/pigcake.jpg"/>
 		<p>
@@ -17,6 +20,6 @@
 			{{desc}} Check its status <a target='_blank' class='font-semibold' href="https://status.hypixel.net">here</a>.
 			{% endif %}
 		</p>
-	</div>\
+	</div>
 </body>
 {% endblock %}
