--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -17,7 +17,7 @@
     <br>
     <div class="text-2xl">How personal data is used</div>
     <p>
-        There is a possibility that tiramisu may collect "usage data", data concerning the User's usage of the tiramisu website that may include IP address, geolocation, browser, operating system, page view length, and more.
+        tiramisu may collect usage data, data concerning the User's usage of the tiramisu website that may include IP address, geolocation, browser, operating system, page view length, and more.
         This information is used solely to create an understanding of the site's viewership. 
     </p>
     <br>
@@ -29,7 +29,7 @@
     <div class="text-2xl">GDPR Compliance</div>
     <p>
         The <a href="https://gdpr.eu">GDPR</a>, or General Data Protection Regulation, is a law enacted by the European Union that serves as a privacy regulation covering users within the European Union.
-        No information that is personally identifiable is used in any form. tiramisu should be compliant with GDPR.
+        No personally identifiable information is used in any form. tiramisu should be compliant with GDPR.
     </p>
     <br>
     <div class="text-2xl">Revisions of this Privacy Policy</div>
