--- a/static/base.scss
+++ b/static/base.scss
@@ -51,7 +51,7 @@ YM.    , YA.   ,A9 MM    MM    MM   MM   ,AP YA.   ,A9 MM    MM YM.    ,  MM    
 p {padding-top:0.35rem;padding-bottom:0.35rem}
 a, .link {text-decoration: underline;color:#666;}
 
-footer{text-align:center;bottom:0;position:relative}
+footer{text-align:center;bottom:0;position:absolute}
 .namehistable {
   max-height: 80vh;
 }
