--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -6,7 +6,7 @@
 <head>
     <title>Privacy Policy | tiramisu</title>
 </head>
-<div class='py-10 px-20 leading-10'>
+<div class='flex-1 grid grid-cols-1 py-10 px-20 leading-10'>
     <div class="text-4xl font-semibold">Privacy Policy</div>
     <br>
     <hr>
@@ -18,18 +18,18 @@
     <div class="text-2xl">How personal data is used</div>
     <p>
         tiramisu may collect usage data, data concerning the User's usage of the tiramisu website that may include IP address, geolocation, browser, operating system, page view length, and more.
-        This information is used solely to create an understanding of the site's viewership. 
+        This information is used solely to create an understanding of the site's viewership; irreversible aggregate data in the sense that the User's information will not be able to personally identify them.
     </p>
     <br>
     <div class="text-2xl">Transfer of your personal data</div>
     <p>
-        The User's PI may be shared with third parties with the sole purpose of interpreting site viewership statistics. The User's data will not be personally identifiable and will only appear in an aggregate dataset.
+        The User's usage data may be shared with third parties with the sole purpose of interpreting site viewership statistics. The User's data will not be personally identifiable and will only appear in an aggregate dataset.
     </p>
     <br>
     <div class="text-2xl">GDPR Compliance</div>
     <p>
         The <a href="https://gdpr.eu">GDPR</a>, or General Data Protection Regulation, is a law enacted by the European Union that serves as a privacy regulation covering users within the European Union.
-        No personally identifiable information is used in any form. tiramisu should be compliant with GDPR.
+        No personally identifiable information is used in any form. tiramisu is compliant with GDPR.
     </p>
     <br>
     <div class="text-2xl">Revisions of this Privacy Policy</div>
