--- a/static/base.scss
+++ b/static/base.scss
@@ -51,7 +51,7 @@ YM.    , YA.   ,A9 MM    MM    MM   MM   ,AP YA.   ,A9 MM    MM YM.    ,  MM    
 p {padding-top:0.35rem;padding-bottom:0.35rem}
 a, .link {text-decoration: underline;color:#666;}
 
-footer{text-align:center;bottom:0;position:absolute}
+footer{text-align:center;bottom:0;position:relative}
 .namehistable {
   max-height: 80vh;
 }
@@ -204,6 +204,18 @@ th {
   75% { height: 100%;}
   100% { height: 0%;}
   }
+
+.tiramisubg {
+  background-color:#ffffff;
+  background-image: repeating-linear-gradient( 
+    45deg
+    , rgb(0 0 0 / 50%), rgb(0 0 0 / 50%) 100px, transparent 0px, transparent 200px ), repeating-linear-gradient( 
+    -45deg
+    , rgb(167 114 79), rgb(167 114 79) 100px, transparent 0px, transparent 200px );
+}
+
+
+
 /*                  ,,                          
                  `7MM                          
                    MM                          
