MAYBE: Some checks. HTML header bug fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang='en'>
-<body class='flex flex-col h-screen relative'>
+<body class='flex flex-col min-h-screen relative'>
 	<head>
 	{% block head %}
 		<title>tiramisu - Hypixel Player Stats Analysis & Name History</title>
@@ -44,7 +44,7 @@
 		</div>
 		<!-- MOBILE USERS -->
 		<div id='mobilelogo' class="flex flex-row flex-nowrap justify-between sticky top-0 bg-gray-100 mb-8 z-40 w-full shadow items-center">
-			<a class='flex-none' href="/"><img class='h-16 w-auto ml-4' src="https://raw.githubusercontent.com/gist/literaiiy/2afd8f09c3d91165dae55c951c76b025/raw/2363d9abacdfa0a3275745f50f81e7dc7b734c00/tiramisNewNoPadding.svg" alt="tiramisu logo but mobile"></a>
+			<a class='flex-none' href="/"><img class='h-12 w-auto ml-4 mr-1' src="https://raw.githubusercontent.com/gist/literaiiy/2afd8f09c3d91165dae55c951c76b025/raw/2363d9abacdfa0a3275745f50f81e7dc7b734c00/tiramisNewNoPadding.svg" alt="tiramisu logo but mobile"></a>
 			<form class='flex-shrink w-full p-1 bg-white px-0 text-gray-600 rounded-lg m-0 self-center relative mx-3 shadow' formnovalidate action="/" method="POST">
 				<input class='w-full py-3 outline-none h-full text-center' type="text" name="content" id="content" autofocus="autofocus" required='true' onfocus="this.select()" autocomplete="off" spellcheck="false" placeholder="Search...">
 				<button class="absolute right-3 w-8 top-0 self-center focus:outline-none h-full" type="submit">
